...
                                                    </connections>
                                                </button>
                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="$0" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mGY-hf-bml">
                                                    <rect key="frame" x="357.66666666666669" y="14" width="21" height="21"/>
                                                    <accessibility key="accessibilityConfiguration" identifier="minPrice"/>
                                                    <fontDescription key="fontDescription" name=".AppleSystemUIFont" family=".AppleSystemUIFont" pointSize="17"/>
                                                    <color key="textColor" red="0.85490196078431369" green="0.14509803921568626" blue="0.10980392156862745" alpha="1" colorSpace="calibratedRGB"/>
...
                                                    <color key="backgroundColor" red="0.85490196080000003" green="0.1450980392" blue="0.10980392160000001" alpha="1" colorSpace="calibratedRGB"/>
                                                    <fontDescription key="fontDescription" style="UICTFontTextStyleHeadline"/>
                                                    <state key="normal" title="Search">
                                                        <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                    </state>
...
        <scene sceneID="pav-KP-cPo">
            <objects>
                <tableViewController title="Add" id="kEF-eM-1ts" customClass="AddTableViewController" customModule="Houser" customModuleProvider="target" sceneMemberID="viewController">
                    <tableView key="view" clipsSubviews="YES" contentMode="scaleAspectFit" alwaysBounceVertical="YES" dataMode="static" style="grouped" separatorStyle="none" allowsSelection="NO" rowHeight="48" sectionHeaderHeight="1" sectionFooterHeight="27" id="dNq-h0-036">
                        <rect key="frame" x="0.0" y="0.0" width="736" height="414"/>
...
                    </tableView>
                    <toolbarItems/>
                    <navigationItem key="navigationItem" title="Add Property" id="Iu4-UL-6GB"/>
                    <connections>
                        <outlet property="Price" destination="1b5-0O-XLe" id="nYC-Mr-yQO"/>
...
                        </constraints>
                    </view>
                    <tabBarItem key="tabBarItem" title="Result" image="list" id="Ib5-Xt-7kJ">
                        <offsetWrapper key="titlePositionAdjustment" horizontal="0.0" vertical="0.0"/>
                    </tabBarItem>
...
                                                </constraints>
                                                <fontDescription key="fontDescription" type="system" pointSize="19"/>
                                                <state key="normal" title="Contact Landlord">
                                                    <color key="titleColor" red="0.85490196080000003" green="0.1450980392" blue="0.10980392160000001" alpha="1" colorSpace="calibratedRGB"/>
                                                </state>
...
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="Detail" id="SDi-62-6P7"/>
                    <nil key="simulatedBottomBarMetrics"/>
                    <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
...
                                </constraints>
                                <fontDescription key="fontDescription" type="system" weight="medium" pointSize="20"/>
                                <state key="normal" title="Tenant">
                                    <color key="titleColor" red="0.95294117647058818" green="0.95294117647058818" blue="0.95294117647058818" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                </state>
...
                                </constraints>
                                <fontDescription key="fontDescription" type="system" weight="medium" pointSize="20"/>
                                <state key="normal" title="Landlord">
                                    <color key="titleColor" red="0.95294117647058818" green="0.95294117647058818" blue="0.95294117647058818" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                </state>
...
                        <offsetWrapper key="titlePositionAdjustment" horizontal="0.0" vertical="0.0"/>
                    </tabBarItem>
                    <navigationItem key="navigationItem" title="My Property" id="nve-k2-ump">
                        <barButtonItem key="rightBarButtonItem" tag="1" systemItem="add" id="VvV-tm-Mw9">
                            <color key="tintColor" red="0.85490196078431369" green="0.14509803921568626" blue="0.10980392156862745" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
...
