...
    override func viewDidLoad() {
        
        super.viewDidLoad()
        
        Model.model.delegate = databasePro
        
        self.tabBarController?.navigationItem.title = "List"
        
    }
    
    override func didReceiveMemoryWarning() {
        super.didReceiveMemoryWarning()
    }
...
    }
    
    //make an allert
    func createAllert(title:String, message:String){
        let alert = UIAlertController(title:title, message:message, preferredStyle:UIAlertControllerStyle.alert)
        
        alert.addAction(UIAlertAction(title:"OK", style:UIAlertActionStyle.default,handler:{(action) in alert.dismiss(animated: true, completion: nil)}))
        
        self.present(alert, animated: true,completion: nil)
        
        
    }
    
...
