...
            
            
            UIApplication.shared.open(numberSMS)
            
        }
        
        let cancelAction = UIAlertAction(title: "Cancel", style: UIAlertActionStyle
            .cancel)
        
        action.addAction(callAction)
        action.addAction(SMSAction)
        action.addAction(cancelAction)
        
...
