...
    
    
    @IBAction func submit(_ sender: Any) {

        if (imageView.image == UIImage(named: "camera.png")){
        
            createAllert(title: "No Image!", message: "Please pick up one photo")
            return
        }
        
        if(descriptionFiled.text == "" || addressFiled.text == "" || phoneFiled.text == ""||suburbFiled.text == ""){
           
            createAllert(title: "Filed is empty!", message: "Please make sure no filed is empty")
...
